<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInPw">

    <Button
        android:id="@+id/btnSignInPw"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_light_black_rounded"
        android:text="@string/textBtnSignInPw"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPw"
        app:layout_constraintVertical_bias="0.753" />

    <EditText
        android:id="@+id/inputPw"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_border_black"
        android:ems="10"
        android:hint="@string/textInputPw"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignInPw"
        app:layout_constraintVertical_bias="0.284"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/txtSignInPw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/textSignInPw"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPawsSignInPw"
        app:layout_constraintVertical_bias="0.298" />

    <ImageView
        android:id="@+id/imgPawsSignInPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/textContentImgPaws"
        android:src="@drawable/paws"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>